--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,9 @@ services:
     build: backend
 
   db:
-    image: mariadb:10.6.4-focal
-    restart: always
-    environment:
-      MYSQL_DATABASE: example
-      MYSQL_USER: root
-      MARIADB_ROOT_PASSWORD_FILE: /run/secrets/db-password
-    secrets:
-      - db-password
+    build: db
 
   frontend:
     build: frontend
     ports:
     - 3000:3000
-
-secrets:
-   db-password:
-     file: db/password.txt
