update docker file

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -4,5 +4,5 @@ COPY password.txt /var/password.txt
 
 ENV MYSQL_DATABASE=example
 ENV MYSQL_USER=root
-ENV MARIADB_ROOT_PASSWORD_FILE: /var/password.txt
+ENV MARIADB_ROOT_PASSWORD="test-1234"
 
