update jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
             steps {
                 sh 'sleep 30'
                 sh 'curl 127.0.0.1:3000'
+                sh 'echo "APPLICATION IS RUNNING"'
             }
         }
     }
