update jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,6 +21,15 @@ pipeline {
                 sh 'curl 127.0.0.1:3000'
                 sh 'echo "APPLICATION IS RUNNING"'
             }
+        withCredentials([usernamePassword(credentialsId: 'nexus', passwordVariable: 'nexus_password', usernameVariable: 'nexus_user')]) {
+            stage('package') {
+                steps {
+                    sh 'echo ${nexus_user}'
+                    sh 'echo docker tag images'
+                    sh 'echo docker upload'
+                    sh 'echo "APPLICATION IS RUNNING"'
+                }
+            }
         }
     }
     post {
