--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,13 +23,14 @@ pipeline {
                 sh 'echo "APPLICATION IS RUNNING"'
             }
         }
-            stage('package') {
+            stage('publish') {
                 steps {
                     withCredentials([usernamePassword(credentialsId: 'nexus', passwordVariable: 'nexus_password', usernameVariable: 'nexus_user')]) {
                     sh 'docker login -u ${nexus_user} -p ${nexus_password} http://10.0.0.107:8811'
                     sh 'docker push 10.0.0.107:8811/app_frontend:${BUILD_NUMBER}'
-                    sh 'echo docker upload'
-                    sh 'echo "APPLICATION IS RUNNING"'
+                    sh 'docker push 10.0.0.107:8811/app_backend:${BUILD_NUMBER}'
+                    sh 'docker push 10.0.0.107:8811/app_db:${BUILD_NUMBER}'
+                    sh "docker rmi -f $(docker images --filter=reference='10.0.0.107:8811/*:${BUILD_NUMBER}' -q)"
                     }
                 }
             }
