--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   backend:
     build: backend
-    image: 10.0.0.107:8811/app_backend:${BUILD_NUMBER}
+    image: ${nexus}/app_backend:${BUILD_NUMBER}
 
   db:
     build: db
-    image: 10.0.0.107:8811/app_db:${BUILD_NUMBER}
+    image: ${nexus}/app_db:${BUILD_NUMBER}
     restart: always
     environment:
       MYSQL_DATABASE: example
@@ -16,7 +16,7 @@ services:
 
   frontend:
     build: frontend
-    image: 10.0.0.107:8811/app_frontend:${BUILD_NUMBER}
+    image: ${nexus}/app_frontend:${BUILD_NUMBER}
     ports:
     - 3000:3000
 
