--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     environment:
       MYSQL_DATABASE: example
       MYSQL_USER: root
-      MARIADB_ROOT_PASSWORD_FILE: /run/secrets/db-password
+      # MARIADB_ROOT_PASSWORD_FILE: /run/secrets/db-password
+      MARIADB_ROOT_PASSWORD: /run/secrets/db-password
     secrets:
       - db-password
   
@@ -22,4 +23,4 @@ services:
 
 secrets:
    db-password:
-     file: ./password.txt
+     file: password.txt
