--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     environment:
       MYSQL_DATABASE: example
       MYSQL_USER: root
-      MARIADB_ROOT_PASSWORD_FILE: ${WORKSPACE}/password.txt
-      # MARIADB_ROOT_PASSWORD: /run/secrets/db-password
+      # MARIADB_ROOT_PASSWORD_FILE: ${WORKSPACE}/password.txt
+      MARIADB_ROOT_PASSWORD: db-57xsl
     # secrets:
     #   - db-password
   
