--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,49 +1,62 @@
 pipeline {
-    environment {
-        nexus = "10.0.0.107:8811"
-    }
+  environment {
+    nexus = "10.0.0.107:8811"
+  }
 
-    agent {
-        label 'ubuntu'
+  agent {
+    kubernetes {
+      yaml '''
+        apiVersion: v1
+        kind: Pod
+        metadata:
+          labels:
+            some-label: some-label-value
+        spec:
+          containers:
+          - name: docker
+            image: docker:latest
+            command:
+            - cat
+            tty: true
+            volumeMounts:
+             - mountPath: /var/run/docker.sock
+               name: docker-sock
+          volumes:
+          - name: docker-sock
+            hostPath:
+              path: /var/run/docker.sock    
+        '''
+      retries 2
     }
-    
-    stages {
-        stage('checkout') {
-            steps {
-                cleanWs()
-                checkout scmGit(branches: [[name: '*/dev']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/shlomoshalit123/react-java0mysql.git']])
-            }
-        }
-        stage('build') {
-            steps {
-                sh 'docker compose up -d'
-            }
-        }
-        stage('test') {
-            steps {
-                sh 'docker ps'
-                sh 'sleep 30'
-                sh 'curl 127.0.0.1:3000'
-                sh 'echo "APPLICATION IS RUNNING"'
-            }
-        }
-            stage('publish') {
-                steps {
-                    withCredentials([usernamePassword(credentialsId: 'nexus', passwordVariable: 'nexus_password', usernameVariable: 'nexus_user')]) {
-                    sh 'docker login -u ${nexus_user} -p ${nexus_password} http://${nexus}'
-                    sh 'docker push ${nexus}/app_frontend:${BUILD_NUMBER}'
-                    sh 'docker push ${nexus}/app_backend:${BUILD_NUMBER}'
-                    sh 'docker push ${nexus}/app_db:${BUILD_NUMBER}'
-                    }
-                }
-            }
+  }
+  stages {
+    stage('checkout') {
+      steps {
+        cleanWs()
+        checkout scmGit(branches: [[name: '*/dev']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/shlomoshalit123/react-java0mysql.git']])
+      } 
     }
-    post {
-       always {
-            sh 'echo ***** CLEANUP *****'    
-            sh 'echo $(docker ps --filter "name=$JOB_NAME")'
-            sh 'docker rm -f $(docker ps --filter "name=$JOB_NAME" -q)'
-            sh 'docker rmi -f $(docker images --filter=reference="${nexus}/*:${BUILD_NUMBER}" -q)'
+    stage('Build') {
+      steps {
+        container('docker') {
+        //   checkout scmGit(branches: [[name: '*/dev']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/shlomoshalit123/react-java0mysql.git']])
+          sh 'pwd && ls -R'
+          sh 'docker compose up -d'
         }
+      }
     }
+    stage('Test') {
+      steps {
+        container('docker') {
+            sh 'docker ps'
+            sh 'sleep 30'
+            // sh 'curl 127.0.0.1:3000'
+            // sh 'echo "APPLICATION IS RUNNING"'
+        }
+        sh 'curl 127.0.0.1:3000'
+        sh 'echo "APPLICATION IS RUNNING"'
+      }
+      
+    }
+  }
 }
