--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -33,16 +33,33 @@ pipeline {
     stage('checkout') {
       steps {
         cleanWs()
-        checkout scmGit(branches: [[name: '*/dev']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/shlomoshalit123/react-java0mysql.git']])
+        // checkout scmGit(branches: [[name: '*/dev']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/shlomoshalit123/react-java0mysql.git']])
       } 
     }
     stage('Run docker') {
       steps {
         container('docker') {
-          sh 'pwd && ls'
-          sh 'docker ps'
-          sh 'docker compose'
+          checkout scmGit(branches: [[name: '*/dev']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/shlomoshalit123/react-java0mysql.git']])
+          sh 'pwd && ls -R'
           sh 'docker compose up -d'
+        }
+      }
+    }
+    stage('test') {
+      steps {
+        sh 'docker ps'
+        sh 'sleep 30'
+        sh 'curl 127.0.0.1:3000'
+        sh 'echo "APPLICATION IS RUNNING"'
+      }
+    }
+    stage('publish') {
+      steps {
+        withCredentials([usernamePassword(credentialsId: 'nexus', passwordVariable: 'nexus_password', usernameVariable: 'nexus_user')]) {
+          sh 'docker login -u ${nexus_user} -p ${nexus_password} http://${nexus}'
+          sh 'docker push ${nexus}/app_frontend:${BUILD_NUMBER}'
+          sh 'docker push ${nexus}/app_backend:${BUILD_NUMBER}'
+          sh 'docker push ${nexus}/app_db:${BUILD_NUMBER}'
         }
       }
     }
