--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -2,3 +2,8 @@ services:
   test:
     build: test
     image: ${nexus}/test:${BUILD_NUMBER}
+
+networks:
+  network1:
+    name: test_default
+    external: true
