--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,9 @@ services:
     environment:
       MYSQL_DATABASE: example
       MYSQL_USER: root
-      # MARIADB_ROOT_PASSWORD_FILE: ${WORKSPACE}/password.txt
-      MARIADB_ROOT_PASSWORD: db-57xsl
-    # secrets:
-    #   - db-password
+      MARIADB_ROOT_PASSWORD_FILE: /run/secrets/db-password
+    secrets:
+      - db-password
   
   frontend:
     build: frontend
@@ -21,9 +20,6 @@ services:
     ports:
     - 3000:3000
 
-  # test:
-  #   build: test
-  #   image: ${nexus}/test:${BUILD_NUMBER}
-# secrets:
-#    db-password:
-#      file: ${WORKSPACE}/password.txt
+secrets:
+   db-password:
+     file: db/password.txt
