--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,62 +1,51 @@
 pipeline {
-  environment {
-    nexus = "10.0.0.107:8811"
-  }
+    environment {
+        nexus = "16.170.159.69:5000"
+        sonarqube = "16.16.202.172:9000"
+        docker_image_name = "sprint-boot"
+    }
 
-  agent {
-    kubernetes {
-      yaml '''
-        apiVersion: v1
-        kind: Pod
-        metadata:
-          labels:
-            some-label: some-label-value
-        spec:
-          containers:
-          - name: docker
-            image: docker:latest
-            command:
-            - cat
-            tty: true
-            volumeMounts:
-             - mountPath: /var/run/docker.sock
-               name: docker-sock
-          volumes:
-          - name: docker-sock
-            hostPath:
-              path: /var/run/docker.sock    
-        '''
-      retries 2
+    agent {
+        label 'ubuntu'
     }
-  }
-  stages {
-    stage('checkout') {
-      steps {
-        cleanWs()
-        checkout scmGit(branches: [[name: '*/dev']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/shlomoshalit123/react-java0mysql.git']])
-      } 
-    }
-    stage('Build') {
-      steps {
-        container('docker') {
-        //   checkout scmGit(branches: [[name: '*/dev']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/shlomoshalit123/react-java0mysql.git']])
-          sh 'pwd && ls -R'
-          sh 'docker compose up -d'
+    
+    stages {
+        stage('checkout') {
+            steps {
+                cleanWs()
+                checkout scmGit(branches: [[name: '*/dev']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/shlomoshalit123/react-java0mysql.git']])
+            }
         }
-      }
-    }
-    stage('Test') {
-      steps {
-        container('docker') {
-            sh 'docker ps'
-            sh 'sleep 30'
-            // sh 'curl 127.0.0.1:3000'
-            // sh 'echo "APPLICATION IS RUNNING"'
+        stage('build') {
+            steps {
+                sh 'docker compose up -d'
+            }
         }
-        sh 'curl 127.0.0.1:3000'
-        sh 'echo "APPLICATION IS RUNNING"'
-      }
-      
+        stage('test') {
+            steps {
+                sh 'docker ps'
+                sh 'sleep 30'
+                sh 'curl 127.0.0.1:3000'
+                sh 'echo "APPLICATION IS RUNNING"'
+            }
+        }
+        stage('publish') {
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'nexus', passwordVariable: 'nexus_password', usernameVariable: 'nexus_user')]) {
+                    sh 'docker login -u ${nexus_user} -p ${nexus_password} http://${nexus}'
+                    sh 'docker push ${nexus}/${docker_image_name}_frontend:${BUILD_NUMBER}'
+                    sh 'docker push ${nexus}/${docker_image_name}_backend:${BUILD_NUMBER}'
+                    sh 'docker push ${nexus}/${docker_image_name}_db:${BUILD_NUMBER}'
+                }
+            }
+        }
     }
-  }
+    post {
+       always {
+            sh 'echo ***** CLEANUP *****'    
+            sh 'echo $(docker ps --filter "name=$JOB_NAME")'
+            sh 'docker rm -f $(docker ps --filter "name=$JOB_NAME" -q)'
+            sh 'docker rmi -f $(docker images --filter=reference="${nexus}/*:${BUILD_NUMBER}" -q)'
+        }
+    }
 }
