--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,31 +21,31 @@ pipeline {
                 sh 'docker compose up -d'
             }
         }
-        stage('test') {
-            steps {
-                sh 'docker ps'
-                sh 'sleep 30'
-                sh 'curl 127.0.0.1:3000'
-                sh 'echo "APPLICATION IS RUNNING"'
-            }
-        }
-        stage('publish') {
-            steps {
-                withCredentials([usernamePassword(credentialsId: 'nexus', passwordVariable: 'nexus_password', usernameVariable: 'nexus_user')]) {
-                    sh 'docker login -u ${nexus_user} -p ${nexus_password} http://${nexus}'
-                    sh 'docker push ${nexus}/${docker_image_name}_frontend:${BUILD_NUMBER}'
-                    sh 'docker push ${nexus}/${docker_image_name}_backend:${BUILD_NUMBER}'
-                    sh 'docker push ${nexus}/${docker_image_name}_db:${BUILD_NUMBER}'
-                }
-            }
-        }
+        // stage('test') {
+        //     steps {
+        //         sh 'docker ps'
+        //         sh 'sleep 30'
+        //         sh 'curl 127.0.0.1:3000'
+        //         sh 'echo "APPLICATION IS RUNNING"'
+        //     }
+        // }
+        // stage('publish') {
+        //     steps {
+        //         withCredentials([usernamePassword(credentialsId: 'nexus', passwordVariable: 'nexus_password', usernameVariable: 'nexus_user')]) {
+        //             sh 'docker login -u ${nexus_user} -p ${nexus_password} http://${nexus}'
+        //             sh 'docker push ${nexus}/${docker_image_name}_frontend:${BUILD_NUMBER}'
+        //             sh 'docker push ${nexus}/${docker_image_name}_backend:${BUILD_NUMBER}'
+        //             sh 'docker push ${nexus}/${docker_image_name}_db:${BUILD_NUMBER}'
+        //         }
+        //     }
+        // }
     }
-    post {
-       always {
-            sh 'echo ***** CLEANUP *****'    
-            sh 'echo $(docker ps --filter="label=app=${docker_image_name}" --filter="label=build=${BUILD_NUMBER}")'
-            sh 'docker rm -f $(docker ps --filter="label=app=${docker_image_name}" --filter="label=build=${BUILD_NUMBER}" -q)'
-            sh 'docker rmi -f $(docker images --filter=reference="${nexus}/*:${BUILD_NUMBER}" -q)'
-        }
-    }
+    // post {
+    //    always {
+    //         sh 'echo ***** CLEANUP *****'    
+    //         sh 'echo $(docker ps --filter="label=app=${docker_image_name}" --filter="label=build=${BUILD_NUMBER}")'
+    //         sh 'docker rm -f $(docker ps --filter="label=app=${docker_image_name}" --filter="label=build=${BUILD_NUMBER}" -q)'
+    //         sh 'docker rmi -f $(docker images --filter=reference="${nexus}/*:${BUILD_NUMBER}" -q)'
+    //     }
+    // }
 }
